--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@nuxt/icon": "2.1.0",
 		"@tauri-apps/api": "^2.9.0",
 		"@tauri-apps/plugin-opener": "^2.5.2",
+		"@tauri-apps/plugin-os": "^2.3.2",
 		"gasp": "^0.0.2",
 		"gsap": "^3.13.0",
 		"nuxt": "^4.2.1",
