--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,6 +24,7 @@ tauri-build = { version = "2.5.2", features = [] }
 [dependencies]
 tauri = { version = "2.9.3", features = [ "macos-private-api" ] }
 tauri-plugin-opener = "2.5.2"
+tauri-plugin-os = "2.3.2"
 serde = { version = "1.0.228", features = [ "derive" ] }
 serde_json = "1.0.145"
 base64 = "0.22"
