--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,13 @@ edition = "2021"
 [lib]
 crate-type = ["cdylib", "rlib"]
 
+[profile.release]
+opt-level = "z"     # 优化二进制大小
+lto = true          # 启用链接时优化
+codegen-units = 1   # 减少代码生成单元以获得更好的优化
+strip = true        # 移除调试符号
+panic = "abort"     # 减少 panic 处理代码
+
 [dependencies]
 serde = { version = "1.0.228", features = [ "derive" ] }
 serde_json = "1.0.149"
