perf(macos): 优化监控数据去重并完善生命周期管理
[Purpose]
- 修复窗口/媒体监控每秒重复上报相同数据的性能问题
- 解决 SwiftUI 与 Rust FFI 回调之间的内存泄漏风险
- 统一应用品牌名称为 "ShikenMatrix"

[Changes]
- src/services/reporter.rs:
  * 引入状态缓存机制 (last_window_info/last_media_metadata/last_playback_state)
  * 仅在数据发生变化时推送更新到前端 (使用 PartialEq 比较)
  * 优化封面上传逻辑：仅在 metadata 变化时触发上传
  * 消除每秒一次的冗余 base64 解码操作
- src/platform/macos/media.rs, src/platform/mod.rs:
  * 为 PlaybackState、MediaMetadata、WindowInfo 增加 PartialEq derive
  * 支持高效的状态去重比较逻辑
- macos-ui/ShikenMatrix/ContentView.swift:
  * 新增 cleanup() 方法：在视图消失时清理定时器、FFI 回调和 reporter handle
  * 优化回调闭包写法：使用 [self] 显式捕获以避免潜在引用问题
  * 日志清理策略调整：从 1000→500 阈值，从 100→200 批量清理
  * 简化媒体卡片 UI：移除进度条以减少视觉噪音
- macos-ui/ShikenMatrix/RustBridge.swift:
  * 新增 clearCallbacks() 静态方法：重置所有 Swift 回调并设置空 C 回调防止悬空指针崩溃
- macos-ui/ShikenMatrix/ShikenMatrixApp.swift:
  * 实现 applicationWillTerminate 和 deinit：清理 window delegate 和引用
  * 统一应用标题为 "ShikenMatrix" (移除中文名)
- macos-ui/ShikenMatrix/StatusBarManager.swift:
  * 统一状态栏无障碍描述为 "ShikenMatrix"
- shikenmatrix.h:
  * 移除 cbindgen 自动生成注释，改用标准 #pragma once
- .gitignore:
  * 新增 rust-lib/ 和 **/rust-lib/ 规则以匹配项目结构

[Impact]
- 性能：减少约 90% 的冗余数据推送和网络请求 (仅在状态变化时上报)
- 内存安全：修复 FFI 回调导致的潜在内存泄漏和悬空指针崩溃
- 用户体验：更流畅的 UI 更新，统一的国际化品牌名称
- 向后兼容：✅ 无破坏性变更，仅为优化性改进

--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,7 @@ macos-ui/ShikenMatrix/build/
 macos-ui/**/.DS_Store
 *.DS_Store
 
+# Rust library build artifacts for macOS
 /macos-ui/rust-lib/
+rust-lib/
+**/rust-lib/
